--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <body>
 
   
-  <img src="your-logo.png" alt="Logo" class="logo" />
+  <img src="Screenshot 2025-04-09 052413.png" alt="Logo" class="logo" />
 
   
   <div class="intro">
