--- a/index.html
+++ b/index.html
@@ -112,31 +112,32 @@
 <body>
 
   
-  <img src="Screenshot 2025-04-09 052413.png" alt="Logo" class="logo" />
+  <img src="download (1).png" alt="Logo" class="logo" />
 
   
   <div class="intro">
-    <h1>Who are we?</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae turpis nulla. Nullam at gravida sem.</p>
+    <h1>Who is "RUNKE"?</h1>
+    <p>We, Runke, are an alternative rock band (from the hick town of Cullman Alabama); from our root's in musical theory and the pure intention to have a good time, we are proud to play loud and welcome you to our family. Welcome! PLACEHOLDER TEXT DANE I KNOW THIS IS CRINGE </p>
   </div>
 
   
   <div class="gallery">
     <div class="gallery-item">
-      <img src="https://via.placeholder.com/150" alt="Member 1" />
-      <p>Member 1</p>
+      <img src="https://via.placeholder.com/150" alt="Guitarist />
+      <p>Dane</p>
     </div>
     <div class="gallery-item">
-      <img src="https://via.placeholder.com/150" alt="Member 2" />
-      <p>Member 2</p>
+      <img src="https://via.placeholder.com/150" alt="Rhythm Guitarist" />
+      <p>Deytan</p>
     </div>
     <div class="gallery-item">
-      <img src="https://via.placeholder.com/150" alt="Member 3" />
-      <p>Member 3</p>
+      <img src="https://via.placeholder.com/150" alt="Bassist" />
+      <p>Lucas</p>
     </div>
     <div class="gallery-item">
-      <img src="https://via.placeholder.com/150" alt="Member 4" />
-      <p>Member 4</p>
+      <img src="https://via.placeholder.com/150" alt="Percussionist/Drummer" />
+      <h>Dylan</h
+      <p> dylan is our cringey fag guitar player lol</p>
     </div>
   </div>
 
@@ -148,7 +149,7 @@
 
   
   <div class="footer" id="footer">
-    Lorem ipsum dolor sit amet · email@example.com · +1 (234) 567-890
+    <a href="https://www.instagram.com/runke_nation/">@Runke_Nation</a> · RunkeNation@gmail.com · +1 (256) 339 3279
   </div>
 
   
