--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   
   <div class="gallery">
     <div class="gallery-item">
-      <img src="https://via.placeholder.com/150" alt="Guitarist />
+      <img src="https://via.placeholder.com/150" alt="Guitarist" />
       <p>Dane</p>
     </div>
     <div class="gallery-item">
@@ -136,9 +136,7 @@
     </div>
     <div class="gallery-item">
       <img src="https://via.placeholder.com/150" alt="Percussionist/Drummer" />
-      <h>Dylan</h
-      <p> dylan is our cringey fag guitar player lol</p>
-    </div>
+      <p>Dylan</p>
   </div>
 
   
