--- a/index.html
+++ b/index.html
@@ -107,6 +107,21 @@
       transition: transform 0.3s ease-out;
     }
 
+    /* Centering the text */
+    .footer p {
+      margin: 0;
+    }
+
+    .footer a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .footer a:hover {
+      color: #ccc;
+    }
+
   </style>
 </head>
 <body>
@@ -147,7 +162,7 @@
 
   
   <div class="footer" id="footer">
-    <a href="https://www.instagram.com/runke_nation/">@Runke_Nation</a> · RunkeNation@gmail.com · +1 (256) 339 3279
+    <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · +1 (256) 339 3279</p>
   </div>
 
   
