--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center; /* Ensures content is vertically centered */
       padding-bottom: 60px;
+      text-align: center; /* Centers all text */
     }
 
     
     .logo {
       position: absolute;
       top: 20px;
-      left: 20px;
+      left: 50%;
+      transform: translateX(-50%); /* Centers the logo */
       height: 100px;
     }
 
@@ -90,9 +93,6 @@
       text-align: center;
       font-size: 16px;
       line-height: 1.6;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
     }
 
     
@@ -100,7 +100,6 @@
       position: fixed;
       bottom: 0;
       width: 100%;
-      text-align: center;
       padding: 10px 0;
       font-size: 14px;
       color: rgba(255, 255, 255, 0.5);
@@ -110,7 +109,7 @@
       transition: transform 0.3s ease-out;
     }
 
-    /* Centering the text */
+    /* Centering the text in the footer */
     .footer p {
       margin: 0;
     }
