--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
       text-align: center;
       font-size: 16px;
       line-height: 1.6;
+      margin-left: auto; 
+      margin-right: auto; /* Ensures it is centered */
     }
 
     
@@ -100,16 +102,14 @@
       position: fixed;
       bottom: 0;
       width: 100%;
+      text-align: center;  /* Centers the text in the footer */
       padding: 10px 0;
       font-size: 14px;
       color: rgba(255, 255, 255, 0.5);
       background-color: transparent;
       pointer-events: auto;  /* Ensures interaction is possible */
-      transform: translateY(0);
-      transition: transform 0.3s ease-out;
     }
 
-    /* Centering the text in the footer */
     .footer p {
       margin: 0;
     }
