--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Psychedelic Band Page</title>
+  <title>Runke</title>
 
   <!-- Oswald font from Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
@@ -116,27 +116,27 @@
 
   
   <div class="intro">
-    <h1>Who are we?</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae turpis nulla. Nullam at gravida sem.</p>
+    <h1>Who is "Runke"?</h1>
+    <p>We are an alternative rock band, based in Cullman, Alabama. from our early childhood we have all had a strong friendship, as well as a deep connection to musical theory; We are great for any venue you need lively music for. </p>
   </div>
 
   
   <div class="gallery">
     <div class="gallery-item">
-      <img src="https://via.placeholder.com/150" alt="Member 1" />
-      <p>Member 1</p>
+      <img src="https://via.placeholder.com/150" alt="dane" />
+      <p>Dane</p>
     </div>
     <div class="gallery-item">
-      <img src="https://via.placeholder.com/150" alt="Member 2" />
-      <p>Member 2</p>
+      <img src="https://via.placeholder.com/150" alt="deytan" />
+      <p>Deytan</p>
     </div>
     <div class="gallery-item">
-      <img src="https://via.placeholder.com/150" alt="Member 3" />
-      <p>Member 3</p>
+      <img src="https://via.placeholder.com/150" alt="lucas" />
+      <p>Lucas</p>
     </div>
     <div class="gallery-item">
-      <img src="https://via.placeholder.com/150" alt="Member 4" />
-      <p>Member 4</p>
+      <img src="https://via.placeholder.com/150" alt="dylan" />
+      <p>Dylan</p>
     </div>
   </div>
 
@@ -148,7 +148,7 @@
 
   
   <div class="footer" id="footer">
-    Lorem ipsum dolor sit amet · email@example.com · +1 (234) 567-890
+   <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · +1 (256) 339 3279</p>
   </div>
 
   
