--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   
   <div class="intro">
     <h1>Who is "Runke"?</h1>
-    <p>We are an alternative rock band, based in Cullman, Alabama. from our early childhood we have all had a strong friendship, as well as a deep connection to musical theory; We are great for any venue you need lively music for. </p>
+    <p>We are an alternative rock band, based in Cullman, Alabama. From our early childhood we have all had a strong friendship, as well as a deep connection to musical theory.</p>
   </div>
 
   
