--- a/index.html
+++ b/index.html
@@ -123,6 +123,17 @@
       color: #ccc;
     }
 
+    .footer-duplicate {
+      position: relative;
+      bottom: 60px; /* Create space between footers */
+      width: 100%;
+      text-align: center;
+      padding: 10px 0;
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.5);
+      background-color: transparent;
+    }
+
   </style>
 </head>
 <body>
@@ -164,6 +175,11 @@
 
   
   <div class="footer" id="footer">
+    <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · +1 (256) 339 3279</p>
+  </div>
+
+  <!-- Duplicated Footer -->
+  <div class="footer-duplicate">
     <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · +1 (256) 339 3279</p>
   </div>
 
