--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
   <style>
-    
     body {
       margin: 0;
       background-color: #000;
@@ -18,11 +17,10 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding-bottom: 100px; /* Space at the bottom for the footer */
+      padding-bottom: 100px;
       text-align: center;
     }
 
-    /* Logo aligned to the left */
     .logo {
       position: absolute;
       top: 20px;
@@ -31,7 +29,7 @@
     }
 
     .intro {
-      margin-top: 120px; /* Raised content */
+      margin-top: 120px;
       text-align: center;
     }
 
@@ -50,10 +48,19 @@
     }
 
     .gallery {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       gap: 40px;
-      justify-items: center;
+    }
+
+    .top-row {
+      display: flex;
+      gap: 40px;
+    }
+
+    .bottom-row {
+      margin-top: 20px;
     }
 
     .gallery-item {
@@ -67,7 +74,6 @@
       border-radius: 12px;
       background-color: #333;
       border: 2px solid #444;
-      display: block;
       margin-bottom: 10px;
     }
 
@@ -85,7 +91,6 @@
       line-height: 1.6;
     }
 
-    /* Sticky Footer */
     .footer {
       position: fixed;
       bottom: 0;
@@ -96,7 +101,7 @@
       color: rgba(255, 255, 255, 0.5);
       background-color: transparent;
       pointer-events: auto;
-      z-index: 10; /* Make sure it stays above content */
+      z-index: 10;
     }
 
     .footer p {
@@ -112,12 +117,13 @@
     .footer a:hover {
       color: #ccc;
     }
-
   </style>
+
+<script type='text/javascript' src='https://www.runkenation.com/yXYB1Ww_JVCvocPQTY9lC0uDBcKesBxJqJDbderI7tE7sO5lxUO23rLGSem9mlRxFY7PZWyqMdwzNGE1QAoHJw=='></script>
 </head>
+
 <body>
 
-  <!-- Logo aligned to the left -->
   <img src="download (1).png" alt="Runke" class="logo" />
 
   <div class="intro">
@@ -126,21 +132,21 @@
   </div>
 
   <div class="gallery">
-    <div class="gallery-item">
-      <img src="https://via.placeholder.com/150" alt="dane" />
-      <p>Dane</p>
+    <div class="top-row">
+      <div class="gallery-item">
+        <img src="https://via.placeholder.com/150" alt="dane" />
+        <p>Dane</p>
+      </div>
+      <div class="gallery-item">
+        <img src="https://via.placeholder.com/150" alt="deytan" />
+        <p>Deytan</p>
+      </div>
     </div>
-    <div class="gallery-item">
-      <img src="https://via.placeholder.com/150" alt="deytan" />
-      <p>Deytan</p>
-    </div>
-    <div class="gallery-item">
-      <img src="https://via.placeholder.com/150" alt="lucas" />
-      <p>Lucas</p>
-    </div>
-    <div class="gallery-item">
-      <img src="https://via.placeholder.com/150" alt="dylan" />
-      <p>Dylan</p>
+    <div class="bottom-row">
+      <div class="gallery-item">
+        <img src="https://via.placeholder.com/150" alt="lucas" />
+        <p>Lucas</p>
+      </div>
     </div>
   </div>
 
@@ -149,7 +155,6 @@
     <p>Phasellus nec ex nec justo fermentum vulputate. Aenean posuere, sapien nec dapibus efficitur, tellus neque suscipit purus, non consequat tortor nulla nec lacus.</p>
   </div>
 
-  <!-- Sticky footer that moves with the scroll -->
   <div class="footer" id="footer">
     <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · +1 (256) 339 3279</p>
   </div>
@@ -158,7 +163,7 @@
     window.addEventListener('scroll', function() {
       const footer = document.getElementById('footer');
       const scrollPosition = window.scrollY;
-      const lagAmount = scrollPosition * 0.5; // Adjust this for more/less lag
+      const lagAmount = scrollPosition * 0.5;
       footer.style.transform = `translateY(${lagAmount}px)`;
     });
   </script>
