--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
   <div class="gallery">
     <div class="top-row">
       <div class="gallery-item">
-        <img src="https://via.placeholder.com/150" alt="dane" />
+        <img src="IMG_0556.jpeg" alt="dane" />
         <p>Dane</p>
       </div>
       <div class="gallery-item">
-        <img src="https://via.placeholder.com/150" alt="deytan" />
+        <img src="IMG_0557.jpeg" alt="deytan" />
         <p>Deytan</p>
       </div>
     </div>
     <div class="bottom-row">
       <div class="gallery-item">
-        <img src="https://via.placeholder.com/150" alt="lucas" />
+        <img src="IMG_0578.jpeg" alt="lucas" />
         <p>Lucas</p>
       </div>
     </div>
