--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
     <div class="bottom-row">
       <div class="gallery-item">
-        <img src="IMG_0578.jpeg" alt="lucas" />
+        <img src="IMG_0578.JPG" alt="lucas" />
         <p>Lucas</p>
       </div>
     </div>
