--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 <body>
 
-  <img src="download (1).png" alt="Runke" class="logo" />
+  <img src="Screenshot 2025-04-09 052413.png" alt="Runke" class="logo" />
 
   <div class="intro">
     <h1>Who is "Runke"?</h1>
