--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Runke</title>
 
-  <!-- Add Favicon -->
+  <!-- Set favicon for the browser tab -->
   <link rel="icon" href="download (1).png" type="image/x-icon" />
-
+  
   <!-- Oswald font from Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
@@ -125,13 +125,11 @@
       color: #ccc;
     }
 
-    /* Subtext now placed at the bottom, but not fixed to the screen */
+    /* Subtext now fixed at the bottom-right */
     .subtext {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      text-align: center;
+      position: fixed;
+      bottom: 10px;
+      right: 10px;
       font-size: 10px;
       color: rgba(255, 255, 255, 0.3);
       z-index: 11;
@@ -169,7 +167,8 @@
 
 <body>
 
-  <img src="Screenshot 2025-04-09 052413.png" alt="Runke" class="logo" />
+  <!-- Logo Image at the top-left corner -->
+  <img src="" alt="RUnkeLogo.png" class="logo" />
 
   <div class="intro">
     <h1>Who is "Runke"?</h1>
@@ -204,6 +203,7 @@
     <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · +1 (256) 339 3279</p>
   </div>
 
+  <!-- Subtext at the bottom-right -->
   <div class="subtext">
     Made by Lucas himself, bet your band doesn't have a cool custom website, poser...
   </div>
