--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <body>
 
   <!-- Logo Image at the top-left corner -->
-  <img src="" alt="RUnkeLogo.png" class="logo" />
+  <img src="" alt="sillysilly.png" class="logo" />
 
   <div class="intro">
     <h1>Who is "Runke"?</h1>
