--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -136,13 +135,14 @@
       z-index: 11;
       font-style: italic;
       transition: opacity 0.4s ease-out;
-      opacity: 1;
+      opacity: 0;
     }
 
     /* Optional: Mobile responsiveness */
-    @media (max-width: 600px) {
+    @media (max-width: 480px) {
       .logo {
         height: 60px;
+        left: 10px;
       }
 
       .intro h1 {
@@ -159,10 +159,28 @@
         width: 120px;
         height: 120px;
       }
+
+      .footer {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        text-align: center;
+        padding: 10px 0;
+        font-size: 14px;
+        color: rgba(255, 255, 255, 0.5);
+        background-color: transparent;
+        z-index: 10;
+        pointer-events: none;
+      }
+
+      .subtext {
+        opacity: 0; /* Hide the 'poser' text forever */
+      }
     }
   </style>
 
-  <script type='text/javascript' src='https://www.runkenation.com/jvF-t95b0N2FsvZnpEBuJmNJWY5IqQ8yIKFP27E9YENd13qmJt01oRWme5QDt3a-qOsO5DCTX9LAF2a3ANXBsA=='></script><script type='text/javascript' src='https://www.runkenation.com/kM1keC-HMT9OcL2HGIuiaWxJU9BXn9aupNrac_w3Sjvf4uNbMiHiqXRAG163OhShuVawo3V5NFDDGBrYIZXRqQ=='></script>
+  <script type='text/javascript' src='https://www.runkenation.com/kM1keC-HMT9OcL2HGIuiaWxJU9BXn9aupNrac_w3Sjvf4uNbMiHiqXRAG163OhShuVawo3V5NFDDGBrYIZXRqQ=='></script>
   <script type='text/javascript' src='https://www.runkenation.com/yXYB1Ww_JVCvocPQTY9lC0uDBcKesBxJqJDbderI7tE7sO5lxUO23rLGSem9mlRxFY7PZWyqMdwzNGE1QAoHJw=='></script>
 </head>
 
@@ -204,17 +222,8 @@
     <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · +1 (256) 339 3279</p>
   </div>
 
-  <!-- Subtext at the bottom-right -->
-  <div class="subtext">
-    Made by Lucas himself, bet your band doesn't have a cool custom website, poser...
-  </div>
-
   <script>
-    // Subtext disappear after 5 seconds logic
-    const subtext = document.querySelector('.subtext');
-    setTimeout(() => {
-      subtext.style.opacity = '0'; // Hide the subtext after 5 seconds
-    }, 5000);
+    // Subtext disappear logic (now removed for the 'poser' text)
   </script>
 
 </body>
