--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
   <img src="sillysilly.png" alt="sillysilly.png" class="logo" />
 
   <div class="intro">
-    <h1>Who is "Runke"?</h1>
-    <p>We are an alternative rock band, based in Cullman, Alabama. From our early childhood we have all had a strong friendship, as well as a deep connection to musical theory.</p>
+    <h1>Who are we??</h1>
+    <p>We (runke) are a 3 person alternative rock band. We three have had grown up with a strong friendship, and a deep connection to music theory. </p>
   </div>
 
   <div class="gallery">
@@ -213,8 +213,10 @@
   </div>
 
   <div class="description">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nisl in bibendum blandit, sapien dolor placerat orci, sit amet varius libero nisi ut nulla.</p>
-    <p>Phasellus nec ex nec justo fermentum vulputate. Aenean posuere, sapien nec dapibus efficitur, tellus neque suscipit purus, non consequat tortor nulla nec lacus.</p>
+    <p>"Runke" consist of:</p> 
+    <p>Dane, the guitarist, who has spent long nights fretting and practicing his fluency on the guitar.</p>
+    <p>Deytan, the long-time percussionist who has spent his high school years playing drums in the school band, and in his personal time.</p>
+    <p>Lucas, The bassist (who while loving the spotlight as much as dane and deytan) loves nothing more than accompanying dane and deytan, and grooving out for hours in deytan's basement.</p>
   </div>
 
   <div class="footer" id="footer">
