--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
   <div class="description">
     <p>"Runke" consist of:</p> 
     <h3>Dane:</h3></h3><p>the guitarist, who has spent long nights fretting and practicing his fluency on the guitar.</p>
-    <h3>Deytan</h3><p>the long-time percussionist, who has spent his high school years playing drums in the school band, and in his personal time.</p>
-    <h3>Lucas</h3></h3><p>The bassist (who while loving the spotlight as much as dane and deytan) loves nothing more than accompanying dane and deytan, and grooving out for hours in deytan's basement.</p>
+    <h3>Deytan:</h3><p>the long-time percussionist, who has spent his high school years playing drums in the school band, and in his personal time.</p>
+    <h3>Lucas:</h3></h3><p>The bassist (who while loving the spotlight as much as dane and deytan) loves nothing more than accompanying dane and deytan, and grooving out for hours in deytan's basement.</p>
   </div>
 
   <div class="footer" id="footer">
