--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
   <div class="intro">
     <h1>Who are we?</h1>
-    <p>We (runke) are a 3 person alternative rock band. We three have had grown up with a strong friendship, and a deep connection to music theory and general groove. </p>
+    <p>We (runke) are a 3 person alternative rock band. The three of us have grown up with a strong friendship, a deep connection to music theory, and a strong desire to make music.</p>
   </div>
 
   <div class="gallery">
@@ -214,9 +214,9 @@
 
   <div class="description">
     <p>"Runke" consist of:</p> 
-    <h3>Dane:</h3></h3><p>the guitarist, who has spent long nights fretting and practicing his fluency on the guitar.</p>
-    <h3>Deytan:</h3><p>the long-time percussionist, who has spent his high school years playing drums in the school band, and in his personal time.</p>
-    <h3>Lucas:</h3></h3><p>The bassist (who while loving the spotlight as much as dane and deytan) loves nothing more than accompanying dane and deytan, and grooving out for hours in deytan's basement.</p>
+  <p><b>Dane:</b></b> the guitarist, who has spent long nights fretting and practicing his fluency on the guitar.</p>
+<p><b>Deytan>:</b> the long-time percussionist, who has spent his high school years playing drums in the school band, and in his personal time.</p>
+  <p><b>Lucas:</b></b> The bassist (who while loving the spotlight as much as dane and deytan) loves nothing more than accompanying dane and deytan, and grooving out for hours in deytan's basement.</p>
   </div>
 
   <div class="footer" id="footer">
