--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
   <div class="description">
     <p>"Runke" consist of:</p> 
   <p><b>Dane:</b></b> the guitarist, who has spent long nights fretting and practicing his fluency on the guitar.</p>
-<p><b>Deytan>:</b> the long-time percussionist, who has spent his high school years playing drums in the school band, and in his personal time.</p>
+<p><b>Deytan:</b> the long-time percussionist, who has spent his high school years playing drums in the school band, and in his personal time.</p>
   <p><b>Lucas:</b></b> The bassist (who while loving the spotlight as much as dane and deytan) loves nothing more than accompanying dane and deytan, and grooving out for hours in deytan's basement.</p>
   </div>
 
