--- a/index.html
+++ b/index.html
@@ -212,12 +212,12 @@
     </div>
   </div>
 
-  <div class="description">
+
     <p>"Runke" consist of:</p> 
-  <p><b>Dane:</b></b> the guitarist, who has spent long nights fretting and practicing his fluency on the guitar.</p>
-<p><b>Deytan:</b> the long-time percussionist, who has spent his high school years playing drums in the school band, and in his personal time.</p>
-  <p><b>Lucas:</b></b> The bassist (who while loving the spotlight as much as dane and deytan) loves nothing more than accompanying dane and deytan, and grooving out for hours in deytan's basement.</p>
-  </div>
+  <p><b>Dane:</b></b> the Guitarist, who has spent long nights fretting and practicing his guitar skills.</p>
+<p><b>Deytan:</b> the Drummer, who has spent his high school years playing drums in the school band, aswell as in his personal time.</p>
+  <p><b>Lucas:</b> The Bassist, who, while loving the spotlight, thrives most when backing up Dane and Deytan; grooving for hours in Deytan's basement.</p>
+
 
   <div class="footer" id="footer">
     <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · +1 (256) 339 3279</p>
