--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     </div>
   </div>
 
- <div class="intro">
+ <div class="description">
     <p>"Runke" consist of:</p> 
   <p><b>Dane:</b></b> the Guitarist, who has spent long nights fretting and practicing his guitar skills.</p>
 <p><b>Deytan:</b> the Drummer, who has spent his high school years playing drums in the school band, aswell as in his personal time.</p>
