--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@
 
  <div class="description">
     <p>"Runke" consist of:</p> 
-  <p><b>Dane:</b></b> the Guitarist, who has spent long nights fretting and practicing his guitar skills.</p>
-<p><b>Deytan:</b> the Drummer, who has spent his high school years playing drums in the school band, aswell as in his personal time.</p>
-  <p><b>Lucas:</b> The Bassist, who, while loving the spotlight, thrives most when backing up Dane and Deytan; grooving for hours in Deytan's basement.</p>
+  <p><b>Dane:</b></b> the Guitarist</p>
+<p><b>Deytan:</b> the Drummer</p>
+  <p><b>Lucas:</b> The Bassist</p>
 
 
   <div class="footer" id="footer">
-    <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · +1 (256) 339 3279</p>
+    <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · (256) 339 3279</p>
   </div>
 
   <script>
