--- a/index.html
+++ b/index.html
@@ -213,11 +213,10 @@
   </div>
 
  <div class="description">
-    <p>"Runke" consist of:</p> 
-  <p><b>Dane:</b></b> the Guitarist</p>
-<p><b>Deytan:</b> the Drummer</p>
-  <p><b>Lucas:</b> The Bassist</p>
-
+    <p> Runke is simply put, a project by and for people who love music. We in Runke all grew up loving genres like Punk rock, 1-2nd wave emo, Indie, and Shoegaze.</p>
+   <p> The group roles are as follows: Dane on guitar, Deytan on drums, and Lucas on bass. We each have a past rooted in our respective instruments, and enjoy playing them.</p>
+   <p> We love music, and we hope you'll join our little tribe and enjoy music with us.</p>
+ </div>
 
   <div class="footer" id="footer">
     <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · (256) 339 3279</p>
