--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
   </div>
 
  <div class="description">
-    <p> Runke is simply put, a project by and for people who love music. We in Runke all grew up loving genres like Punk rock, 1-2nd wave emo, Indie, and Shoegaze.</p>
-   <p> The group roles are as follows: Dane on guitar, Deytan on drums, and Lucas on bass. We each have a past rooted in our respective instruments, and enjoy playing them.</p>
-   <p> We love music, and we hope you'll join our little tribe and enjoy music with us.</p>
+    <p> Runke is, simply put, a project by and for people who love music. We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.</p>
+   <p> The group roles are as follows: Dane on guitar, Deytan on drums, and Lucas on bass.</p>
+   <p> We love music, and we hope you'll join our little tribe and enjoy music with us. We love you dude, chill...</p>
  </div>
 
   <div class="footer" id="footer">
