--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 <body>
 
-  <img src="sillysilly.png" alt="sillysilly.png" class="logo" />
+  <img src="sushi.png" alt="sillysilly.png" class="logo" />
 
   <div class="intro">
     <h1>Who are we?</h1>
