--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Runke</title>
 
   <!-- Set favicon for the browser tab -->
-  <link rel="icon" href="download (1).png" type="image/x-icon" />
+  <link rel="icon" href="sushi.png" type="image/x-icon" />
   
   <!-- Preconnect and load Special Gothic Expanded One font from Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -186,7 +186,7 @@
 
 <body>
 
-  <img src="sushi.png" alt="sillysilly.png" class="logo" />
+  <img src="sillysilly.png" alt="sillysilly.png" class="logo" />
 
   <div class="intro">
     <h1>Who are we?</h1>
