--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
     .intro {
       margin-top: 120px;
     }
+  
+    body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  border: 10px solid white;
+  box-sizing: border-box;
+  pointer-events: none;
+  z-index: 9999;
+}
+
 
     .intro h1 {
       font-size: 32px;
