--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
    <p> We love music, and we hope you'll join our little tribe and enjoy music with us. We love you dude, chill...</p>
  </div>
 
+  <a href="about us and stuff.html">About Us</a>
+
+
   <div class="footer" id="footer">
     <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · (256) 339 3279</p>
   </div>
