--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
    <p> We love music, and we hope you'll join our little tribe and enjoy music with us. We love you dude, chill...</p>
  </div>
 
-  <a href="yes.html">About Us</a>
+  <!--><a href="yes.html">About Us</a> </!-->
 
 
   <div class="footer" id="footer">
